# whitebox_ECDSA_attack_tool

./: .env.example  Dockerfile  Dockerfile.alternative  Dockerfile.simple  Dockerfile.test  MAIN-PROJECT-README.md  README.md  SETUP_GUIDE.md  docker-compose.yml  e logs --tail=20 crawler | grep -E "(Error computing SegWit sighash|Statistics|extracted.*signature)"  monitor.py  package-lock.json  pyproject.toml  requirements.txt  run.sh  start_crawler.sh  test_fpylll.py
config/: config.yaml
reference_docs/: RSZ_pubkey.md
src/llh/analysis/: main.py
src/llh/attack/: main.py
src/llh/crawler/: checkpoint.py  main.py  transaction_parser.py
src/llh/database/: connection.py  models.py
src/llh/lattice/: builder.py  predicate.py  solver.py
src/llh/utils/: config.py  logging.py
tests/: conftest.py
tests/integration/: test_crawler.py
