[tool.poetry]
name = "ecdsattack"
version = "0.2.0"
description = "ecdsattack is a package which retrieves private keys from faulted ECDSA signatures."
license = "MIT"
authors = ["Adrian Thillard <adrian.thillard@ledger.fr>", "Jean-Baptiste Bédrune <jean-baptiste.bedrune@ledger.fr>"]
readme = "README.md"
packages = [{include = "llh", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ecdsa = ">=0.17.0"
python-bitcoinlib = ">=0.11.0"
pymongo = ">=4.0.0"
motor = ">=3.0.0"
pydantic = ">=2.0.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
fpylll = ">=0.5.0"
PyYAML = ">=6.0"
requests = ">=2.26.0"
python-dotenv = ">=0.19.0"
asyncio = ">=3.4.3"
pandas = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-asyncio = ">=0.18.0"
pytest-cov = ">=3.0.0"
black = ">=22.0.0"
isort = ">=5.10.0"
mypy = ">=0.910"
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
